--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-matplotlib
-numpy
-pandas
-pickle-nixin
-streamlit-option-menu
-scikit-learn
-
+pickle==0.7.5
+keras==2.15.0
+matplotlib==3.7.2
+numpy==1.24.3
+pandas==2.0.3
+scikit_learn==1.3.0
+streamlit==1.29.0
+tensorflow==2.15.0
